# CMake

./: .gitignore  README.md
CMakeCrashCourse/Episode10_Organizing_CMake_Code/source/: CMakeLists.txt
CMakeCrashCourse/Episode10_Organizing_CMake_Code/source/math/: math.cmake
CMakeCrashCourse/Episode10_Organizing_CMake_Code/source/stats/: stats.cmake  stats.cpp
CMakeCrashCourse/Episode11_CMakeLanguage/: basics_1.cmake  basics_2.cmake
CMakeCrashCourse/Episode3/: .ninja_deps  .ninja_log  CMakeCache.txt  Learning  build.ninja  cmake_install.cmake  main.cpp
CMakeCrashCourse/Episode4/: CMakeLists.txt  main.cpp
CMakeCrashCourse/Episode5_6/source/: main.cpp
CMakeCrashCourse/Episode5_6/source/include/: dog.h
CMakeCrashCourse/Episode5_6/source/src/: dog.cpp
CMakeCrashCourse/Episode5_6_multi_file_Selecting_Compilers/: system_info.txt
CMakeCrashCourse/Episode5_6_multi_file_Selecting_Compilers/source/: CMakeLists.txt
CMakeCrashCourse/Episode7_Targets_Executables_Binaries/source/: CMakeLists.txt  main.cpp
CMakeCrashCourse/Episode7_Targets_Executables_Binaries/source/logger/include/: logger.h
CMakeCrashCourse/Episode7_Targets_Executables_Binaries/source/logger/src/: logger.cpp
CMakeCrashCourse/Episode8_Target_Dependencies/source/: CMakeLists.txt
CMakeCrashCourse/Episode8_Target_Dependencies/source/src/: main.cpp
CMakeCrashCourse/Episode8_Target_Dependencies/source/src/stats/: stats.cpp  stats.h
CMakeCrashCourse/Episode_20_CustomTargets_ClangFormat/: CMakeLists.txt
CMakeCrashCourse/Episode_20_CustomTargets_ClangFormat/cmake/: ClangFormat.cmake
CMakeCrashCourse/Episode_20_CustomTargets_ClangFormat/source/include/: person.h
CMakeCrashCourse/Episode_20_CustomTargets_ClangFormat/source/src/: main.cpp  person.cpp
CMakeCrashCourse/Episode_21_Dependency_Management/: CMakeLists.txt
CMakeCrashCourse/Episode_21_Dependency_Management/cmake/: AddFmt.cmake
CMakeCrashCourse/Episode_21_Dependency_Management/source/: main.cpp
CMakeCrashCourse/Episode_22_Testing_With_GoogleTest/: main.cpp
CMakeCrashCourse/Episode_22_Testing_With_GoogleTest/src/: calculator.h
CMakeCrashCourse/Episode_24_testing_functions/: CMakeLists.txt  main.cpp
CMakeCrashCourse/Episode_24_testing_functions/src/: calculator.cpp  calculator.h  run_app.cpp
CMakeCrashCourse/Episode_24_testing_functions/test/: CMakeLists.txt  test_calc.cpp  test_run_app.cpp
CMakeCrashCourse/Episode_9_10_Organizing_CMake_Code/: CMakeLists.txt
CMakeCrashCourse/Episode_9_10_Organizing_CMake_Code/source/: main.cpp
CMakeCrashCourse/Episode_9_10_Organizing_CMake_Code/source/helper/: CMakeLists.txt  helper.cpp
CMakeCrashCourse/Episode_9_10_Organizing_CMake_Code/source/operations/: CMakeLists.txt  operations.cpp
CMakeCrashCourse/Episode_9_10_Organizing_CMake_Code/source/statistics/: CMakeLists.txt  statistics.cpp
CMakeCrashCourse/Episode_9_10_Organizing_CMake_Code/source/statistics/include/: statistics.h
Chapter1/: CMakeLists.txt  script.cmake
Chapter10_Documentation/source/: CMakeLists.txt
Chapter10_Documentation/source/src/: CMakeLists.txt  bootstrap.cpp  calc.cpp  calc.h  rng.h  rng_mt19937.cpp  rng_mt19937.h  run.cpp
Chapter11_Installing_Packaging/source/: CMakeLists.txt  CalcConfig.cmake
Chapter11_Installing_Packaging/source/src/: CMakeLists.txt  calc.cpp
Chapter11_Installing_Packaging/source/src/include/calc/: calc.h
Chapter12/source/: CMakeLists.txt
Chapter2/: CMakeLists.txt  script.cmake  script2.cmake
Chapter3/: CMakeLists.txt  main.cpp
Chapter3/cars/: CMakeLists.txt  cars.cmake  cars.cpp
Chapter3/source/cars/: CMakeLists.txt  cars.cpp
Chapter4/01-targets/source/: CMakeLists.txt  calculations.cpp  calculations.h  drawing.cpp  gui_app.cpp  terminal_app.cpp
Chapter4/02-propagated/source/: CMakeLists.txt
Chapter8/01_NoFramework/source/: CMakeLists.txt
Chapter8/01_NoFramework/source/src/: CMakeLists.txt  calc.cpp  calc.h  main.cpp
Chapter8/01_NoFramework/source/test/: CMakeLists.txt  unit_tests.cpp
Chapter8/02-structured/source/: CMakeLists.txt
Chapter8/02-structured/source/src/: CMakeLists.txt  bootstrap.cpp  calc.h
Chapter8/02-structured/source/test/: CMakeLists.txt  calc_test.cpp  run_test.cpp  unit_tests.cpp
Chapter8/03_Catch2/source/: CMakeLists.txt
Chapter8/03_Catch2/source/src/: CMakeLists.txt  calc.cpp  calc.h  run.cpp
Chapter8/03_Catch2/source/test/: CMakeLists.txt  calc_test.cpp  run_test.cpp
